# nature-imgui

./: .gitignore  CMakeLists.txt  README.md  build.sh  declarative_renderer.cpp  declarative_ui.h  imgui_bindings.cpp  imgui_bindings.h  main.n  package.toml
docs/: BUILD_AND_TEST_SUMMARY.md  DECLARATIVE_UI_DESIGN.md  DECLARATIVE_UI_README.md  MEMORY_FIX_SUMMARY.md  REFactoring_Summary.md  agent.md
examples/: advanced_declarative_demo.cpp  declarative_demo.n  demo.n  rendering_demo.cpp  simple_declarative_demo.cpp
lib/: imgui_bindings.cpp  imgui_bindings.h
scripts/: run_memory_test.sh  test_simple_demo.sh
src/cpp/bindings/: declarative_ui_bindings.cpp  declarative_ui_bindings.h  imgui_bindings.cpp
src/cpp/declarative_ui/: declarative_ui.cpp
src/cpp/renderer/: declarative_renderer.h
src/nature/binding/: declarative.n  main.n
tests/: declarative_ui_test.cpp  memory_test.cpp  simple_test.cpp
